add_subdirectory(Judge)
target_sources(odyssey PRIVATE
        CapTargetInfoFunction.cpp
        CapTargetInfoFunction.h
        CapTargetInfo.h
        CapTargetInfo.cpp
        PlayerHackStartShaderCtrl.h
        PlayerHackKeeper.h
        PlayerConst.cpp
        Player.cpp
        PlayerConst.h
        PlayerActorBase.h
        PlayerHackKeeper.cpp
        Player.h
        PlayerActorBase.cpp
)


